--- a/pound/error_page/css/styles.css
+++ b/pound/error_page/css/styles.css
@@ -9,8 +9,8 @@
 ===================================================================== */
 
 /* FOR FIREFOX 3.5+, Safari and Opera 10 (IE has different requirements and needs .eot format) */
-@font-face { font-family: "Droid Custom"; src: url(../fonts/DroidSerif-Regular.ttf) format("truetype"); }  
-@font-face { font-family: "Droid Custom"; src: url(../fonts/DroidSerif-Bold.ttf) format("truetype"); font-weight: bold; }  
+@font-face { font-family: "Droid Custom"; src: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/fonts/DroidSerif-Regular.ttf) format("truetype"); }  
+@font-face { font-family: "Droid Custom"; src: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/fonts/DroidSerif-Bold.ttf) format("truetype"); font-weight: bold; }  
 
 /* Optional Background "bg-opt.jpg" */
 body { color: #646464; font: 13px Helvetica, Arial, sans-serif; line-height: 17px; }
@@ -18,28 +18,28 @@ body { color: #646464; font: 13px Helvetica, Arial, sans-serif; line-height: 17p
 /* ============= LAYOUT ============= */
 #ajaxWrap { width: 100%; height: 100%; }
 #wrapper { width: 734px; margin: 0 auto; position: relative; }
-#bg-top { height: 31px; background: url(../images/template/container-top-bg.png) no-repeat; }
-#bg-bottom { height: 31px; background: url(../images/template/container-bottom-bg.png) no-repeat; }
-#contentWrap { background: url(../images/template/container-bg-repeat.png) repeat-y; padding: 14px 0; }
-#content { width: 700px; background: url(../images/template/content-gradient-bg.png) no-repeat; margin-bottom: -56px; position: relative; top: -28px; left: 17px; }
+#bg-top { height: 31px; background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/container-top-bg.png) no-repeat; }
+#bg-bottom { height: 31px; background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/container-bottom-bg.png) no-repeat; }
+#contentWrap { background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/container-bg-repeat.png) repeat-y; padding: 14px 0; }
+#content { width: 700px; background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/content-gradient-bg.png) no-repeat; margin-bottom: -56px; position: relative; top: -28px; left: 17px; }
 
-#leftColumn { width: 240px; background: url(../images/template/divider-shadow.png) no-repeat right 0; position: relative; z-index: 1; }
-#rightColumn { width: 321px; background: url(../images/template/divider.gif) repeat-y; margin-left: -1px; }
+#leftColumn { width: 240px; background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/divider-shadow.png) no-repeat right 0; position: relative; z-index: 1; }
+#rightColumn { width: 321px; background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/divider.gif) repeat-y; margin-left: -1px; }
 #leftColumn, #rightColumn { height: 380px; float: left; padding: 35px; }
 
 #logo { margin: 0 auto; margin-top: -9px; display: block; }
 
 /* ============= MISC ELEMENTS ============= */
 #nav { margin: 20px 0 0 20px; }
-#nav ul { list-style: none; font-weight: normal; padding: 15px 0 10px 25px; margin-left: 65px; background: url(../images/template/menu-divider.png) no-repeat; }
+#nav ul { list-style: none; font-weight: normal; padding: 15px 0 10px 25px; margin-left: 65px; background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/menu-divider.png) no-repeat; }
 #nav li { height: 34px; padding-left: 35px; opacity: .5; cursor: pointer; }
 #nav li:hover { opacity: 1; }
 #nav li a { font-size: 16px; text-decoration: none; color: #666; line-height: 26px; }
 #nav li:hover a { color: #a62e2e; }
 
-#nav li.home { background: url(../images/template/icons/home-icon.png) no-repeat; }
-#nav li.about { background: url(../images/template/icons/about-icon.png) no-repeat; }
-#nav li.contact { background: url(../images/template/icons/contact-icon.png) no-repeat; }
+#nav li.home { background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/icons/home-icon.png) no-repeat; }
+#nav li.about { background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/icons/about-icon.png) no-repeat; }
+#nav li.contact { background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/icons/contact-icon.png) no-repeat; }
 
 #nav span { display: block; height: 50px; float: left; padding-top: 50px; font: 16px  "Droid Custom", Georgia, Garamond, serif; text-align: right; font-weight: normal; }
 
@@ -51,14 +51,14 @@ input[type='text'] {
 	border: 0;
 	padding: 8px 11px 5px;
 	color: #666;
-	background: url(../images/template/search-input-bg.png) no-repeat;
+	background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/search-input-bg.png) no-repeat;
 }
 input[type='submit'] {
 	width: 28px;
 	height: 29px;
 	border: 0;
 	cursor: pointer;
-	background: url(../images/template/search-btn.png) no-repeat;
+	background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/search-btn.png) no-repeat;
 }
 input[type='submit']:hover { background-position: 0 -30px; }
 
@@ -70,7 +70,7 @@ input[type='submit']:hover { background-position: 0 -30px; }
 	position: absolute;
 	bottom: 18px;
 	right: 20px;
-	background: url(../images/template/close-btn.png) no-repeat right 0;
+	background: url(http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/images/template/close-btn.png) no-repeat right 0;
 	line-height: 26px;
 	text-decoration: none;
 	color: #999;
