--- a/dlllciasrouter/www/dlllciasrouter/css/styles.css
+++ b/dlllciasrouter/www/dlllciasrouter/css/styles.css
@@ -2,6 +2,7 @@
 * Filename: styles.css
 * Template: Website Error Pages
 * Author: Jarel Remick - http://www.jremick.com
+* Source: http://www.freshdesignweb.com/free-404-error-page-template.html
 * Date Created: 08/18/2009
 * Media: Screen
 * ------
@@ -30,8 +31,11 @@ body { color: #646464; font: 13px Helvetica, Arial, sans-serif; line-height: 17p
 #logo { margin: 0 auto; margin-top: -9px; display: block; }
 
 /* ============= MISC ELEMENTS ============= */
-#nav { margin: 20px 0 0 20px; }
-#nav ul { list-style: none; font-weight: normal; padding: 15px 0 10px 25px; margin-left: 65px; background: url(https://dl.dropboxusercontent.com/u/717137/20130914-error_page/images/template/menu-divider.png) no-repeat; }
+#nav { margin: 20px 0 0 0px; }
+#nav ul { 
+    list-style: none; font-weight: normal; padding: 15px 0 10px 25px; margin-left: 65px; background: url(https://dl.dropboxusercontent.com/u/717137/20130914-error_page/images/template/menu-divider.png) no-repeat; 
+    background-position-y: center;
+}
 #nav li { height: 34px; padding-left: 35px; opacity: .5; cursor: pointer; }
 #nav li:hover { opacity: 1; }
 #nav li a { font-size: 16px; text-decoration: none; color: #666; line-height: 26px; }
@@ -89,7 +93,7 @@ h1,h2,h3,h4,h5,h6 { font-family: "Droid Custom", Georgia, Garamond, serif; font-
 h1 {
 	font-size: 80px;
 	line-height: 128px;
-	letter-spacing: -5px;
+	/*letter-spacing: -5px;*/
 	color: #000;
 	width: 240px;
 	position: absolute;
@@ -109,7 +113,7 @@ h1 span {
 }
 .logo {
 	font-size: 36px;
-	letter-spacing: -5px;
+	/*letter-spacing: -5px;*/
         line-height: 40px;
         text-decoration: none;
         color:#188ECE;
@@ -131,7 +135,7 @@ strong      { font-weight: bold; }
 em		    { font-style: italic; }
 
 /* === Lists === */
-ul, ol      { margin: 0 20px 20px 40px; font-weight: bold; color: #a62e2e; line-height: 20px; }
+ul, ol      { margin: 0 0px 20px 40px; font-weight: bold; color: #a62e2e; line-height: 20px; }
 ol span		{ font-weight: normal; color: #646464; }
 
 ul          { list-style-type: disc; }
